--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ nalgebra = { version = "0.24.0", features = ["alga"] }
 alga = "0.9.3"
 typenum = "1.12.0"
 fnv = "1.0.7"
-serde = { package = "serde", version = "1.0.117", optional = true, features = ["derive"] }
 simplicity = "0.2.0"
 float-ord = "0.2.0"
+serde = { version = "1.0.117", optional = true, features = ["derive"] }
+obj = { version = "0.10.2", optional = true }
